libpq-fe-v1.147.pas


unit libpq-fe-original;
interface

{
  Automatically converted by H2Pas 1.0.0 from libpq-fe-original.h
  The following command line parameters were used:
    -c
    -p
    libpq-fe-original.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
P_PQconninfoOption  = ^_PQconninfoOption;
P_PQprintOpt  = ^_PQprintOpt;
Pbyte  = ^byte;
Pchar  = ^char;
PConnStatusType  = ^ConnStatusType;
PExecStatusType  = ^ExecStatusType;
PFILE  = ^FILE;
Plongint  = ^longint;
POid  = ^Oid;
PPGcancel  = ^PGcancel;
PPGconn  = ^PGconn;
PpgNotify  = ^pgNotify;
PpgresAttDesc  = ^pgresAttDesc;
PPGresult  = ^PGresult;
PPGTransactionStatusType  = ^PGTransactionStatusType;
PPGVerbosity  = ^PGVerbosity;
PPostgresPollingStatusType  = ^PostgresPollingStatusType;
PPQArgBlock  = ^PQArgBlock;
Ppqbool  = ^pqbool;
PPQconninfoOption  = ^PQconninfoOption;
PPQprintOpt  = ^PQprintOpt;
Psize_t  = ^size_t;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{-------------------------------------------------------------------------
 *
 * libpq-fe.h
 *	  This file contains definitions for structures and
 *	  externs for functions used by frontend postgres applications.
 *
 * Portions Copyright (c) 1996-2009, PostgreSQL Global Development Group
 * Portions Copyright (c) 1994, Regents of the University of California
 *
 * $PostgreSQL: pgsql/src/interfaces/libpq/libpq-fe.h,v 1.147 2009/06/11 14:49:14 momjian Exp $
 *
 *-------------------------------------------------------------------------
  }
{$ifndef LIBPQ_FE_H}
{$define LIBPQ_FE_H}
{$include }
{
 * postgres_ext.h defines the backend's externally visible types,
 * such as Oid.
  }
{$include "postgres_ext.h"}
{
 * Option flags for PQcopyResult
  }

const
  PG_COPYRES_ATTRS = $01;  
{ Implies PG_COPYRES_ATTRS  }
  PG_COPYRES_TUPLES = $02;  
  PG_COPYRES_EVENTS = $04;  
  PG_COPYRES_NOTICEHOOKS = $08;  
{ Application-visible enum types  }
{
	 * Although it is okay to add to this list, values which become unused
	 * should never be removed, nor should constants be redefined - that would
	 * break compatibility with existing code.
	  }
{ Non-blocking mode only below here  }
{
	 * The existence of these should never be relied upon - they should only
	 * be used for user feedback or similar purposes.
	  }
{ Waiting for connection to be made.   }
{ Connection OK; waiting to send.	    }
{ Waiting for a response from the
										 * postmaster.		   }
{ Received authentication; waiting for
								 * backend startup.  }
{ Negotiating environment.  }
{ Negotiating SSL.  }
{ Internal state: connect() needed  }
type
  PConnStatusType = ^ConnStatusType;
  ConnStatusType = (CONNECTION_OK,CONNECTION_BAD,CONNECTION_STARTED,
    CONNECTION_MADE,CONNECTION_AWAITING_RESPONSE,
    CONNECTION_AUTH_OK,CONNECTION_SETENV,CONNECTION_SSL_STARTUP,
    CONNECTION_NEEDED);
{ These two indicate that one may	   }
{ use select before polling again.    }
{ unused; keep for awhile for backwards
								 * compatibility  }

  PPostgresPollingStatusType = ^PostgresPollingStatusType;
  PostgresPollingStatusType = (PGRES_POLLING_FAILED := 0,PGRES_POLLING_READING,
    PGRES_POLLING_WRITING,PGRES_POLLING_OK,
    PGRES_POLLING_ACTIVE);
{ empty query string was executed  }
{ a query command that doesn't return
								 * anything was executed properly by the
								 * backend  }
{ a query command that returns tuples was
								 * executed properly by the backend, PGresult
								 * contains the result tuples  }
{ Copy Out data transfer in progress  }
{ Copy In data transfer in progress  }
{ an unexpected response was recv'd from the
								 * backend  }
{ notice or warning message  }
{ query failed  }

  PExecStatusType = ^ExecStatusType;
  ExecStatusType = (PGRES_EMPTY_QUERY := 0,PGRES_COMMAND_OK,
    PGRES_TUPLES_OK,PGRES_COPY_OUT,PGRES_COPY_IN,
    PGRES_BAD_RESPONSE,PGRES_NONFATAL_ERROR,
    PGRES_FATAL_ERROR);
{ connection idle  }
{ command in progress  }
{ idle, within transaction block  }
{ idle, within failed transaction  }
{ cannot determine status  }

  PPGTransactionStatusType = ^PGTransactionStatusType;
  PGTransactionStatusType = (PQTRANS_IDLE,PQTRANS_ACTIVE,PQTRANS_INTRANS,
    PQTRANS_INERROR,PQTRANS_UNKNOWN);
{ single-line error messages  }
{ recommended style  }
{ all the facts, ma'am  }

  PPGVerbosity = ^PGVerbosity;
  PGVerbosity = (PQERRORS_TERSE,PQERRORS_DEFAULT,PQERRORS_VERBOSE
    );
{ PGconn encapsulates a connection to the backend.
 * The contents of this struct are not supposed to be known to applications.
  }
  pg_conn = PGconn;
{ PGresult encapsulates the result of a query (or more precisely, of a single
 * SQL command --- a query string given to PQsendQuery can contain multiple
 * commands and thus return multiple PGresult objects).
 * The contents of this struct are not supposed to be known to applications.
  }
  pg_result = PGresult;
{ PGcancel encapsulates the information needed to cancel a running
 * query on an existing connection.
 * The contents of this struct are not supposed to be known to applications.
  }
  pg_cancel = PGcancel;
{ PGnotify represents the occurrence of a NOTIFY message.
 * Ideally this would be an opaque typedef, but it's so simple that it's
 * unlikely to change.
 * NOTE: in Postgres 6.4 and later, the be_pid is the notifying backend's,
 * whereas in earlier versions it was always your own backend's PID.
  }
{ notification condition name  }
{ process ID of notifying server process  }
{ notification parameter  }
{ Fields below here are private to libpq; apps should not use 'em  }
{ list link  }

  PpgNotify = ^pgNotify;
  pgNotify = record
      relname : Pchar;
      be_pid : longint;
      extra : Pchar;
      next : PpgNotify;
    end;
{ Function types for notice-handling callbacks  }
(* Const before type ignored *)

  PQnoticeReceiver = procedure (arg:pointer; res:PPGresult);cdecl;
(* Const before type ignored *)

  PQnoticeProcessor = procedure (arg:pointer; message:Pchar);cdecl;
{ Print options for PQprint()  }

  Ppqbool = ^pqbool;
  pqbool = char;
{ print output field headings and row count  }
{ fill align the fields  }
{ old brain dead format  }
{ output html tables  }
{ expand tables  }
{ use pager for output if needed  }
{ field separator  }
{ insert to HTML   }
{ HTML 
  }
{ null terminated array of replacement field
								 * names  }

  P_PQprintOpt = ^_PQprintOpt;
  _PQprintOpt = record
      header : pqbool;
      align : pqbool;
      standard : pqbool;
      html3 : pqbool;
      expanded : pqbool;
      pager : pqbool;
      fieldSep : Pchar;
      tableOpt : Pchar;
      caption : Pchar;
      fieldName : ^Pchar;
    end;
  PQprintOpt = _PQprintOpt;
  PPQprintOpt = ^PQprintOpt;
{ ----------------
 * Structure for the conninfo parameter definitions returned by PQconndefaults
 * or PQconninfoParse.
 *
 * All fields except "val" point at static strings which must not be altered.
 * "val" is either NULL or a malloc'd current-value string.  PQconninfoFree()
 * will release both the val strings and the PQconninfoOption array itself.
 * ----------------
  }
{ The keyword of the option			 }
{ Fallback environment variable name	 }
{ Fallback compiled in default value	 }
{ Option's current value, or NULL		  }
{ Label for field in connect dialog	 }
{ Indicates how to display this field in a
								 * connect dialog. Values are: "" Display
								 * entered value as is "*" Password field -
								 * hide value "D"  Debug option - don't show
								 * by default  }
{ Field size in characters for dialog	 }

  P_PQconninfoOption = ^_PQconninfoOption;
  _PQconninfoOption = record
      keyword : Pchar;
      envvar : Pchar;
      compiled : Pchar;
      val : Pchar;
      _label : Pchar;
      dispchar : Pchar;
      dispsize : longint;
    end;
  PQconninfoOption = _PQconninfoOption;
  PPQconninfoOption = ^PQconninfoOption;
{ ----------------
 * PQArgBlock -- structure for PQfn() arguments
 * ----------------
  }
{ can't use void (dec compiler barfs)	  }

  PPQArgBlock = ^PQArgBlock;
  PQArgBlock = record
      len : longint;
      isint : longint;
      u : record
          case longint of
            0 : ( ptr : Plongint );
            1 : ( integer : longint );
          end;
    end;
{ ----------------
 * PGresAttDesc -- Data about a single attribute (column) of a query result
 * ----------------
  }
{ column name  }
{ source table, if known  }
{ source column, if known  }
{ format code for value (text/binary)  }
{ type id  }
{ type size  }
{ type-specific modifier info  }

  PpgresAttDesc = ^pgresAttDesc;
  pgresAttDesc = record
      name : Pchar;
      tableid : Oid;
      columnid : longint;
      format : longint;
      typid : Oid;
      typlen : longint;
      atttypmod : longint;
    end;
{ ----------------
 * Exported functions of libpq
 * ----------------
  }
{ ===	in fe-connect.c ===  }
{ make a new client connection to the backend  }
{ Asynchronous (non-blocking)  }
(* Const before type ignored *)

function PQconnectStart(conninfo:Pchar):PPGconn;cdecl;
function PQconnectPoll(conn:PPGconn):PostgresPollingStatusType;cdecl;
{ Synchronous (blocking)  }
(* Const before type ignored *)
function PQconnectdb(conninfo:Pchar):PPGconn;cdecl;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function PQsetdbLogin(pghost:Pchar; pgport:Pchar; pgoptions:Pchar; pgtty:Pchar; dbName:Pchar; 
           login:Pchar; pwd:Pchar):PPGconn;cdecl;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function PQsetdb(M_PGHOST,M_PGPORT,M_PGOPT,M_PGTTY,M_DBNAME : longint) : longint;
